--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -25,7 +25,7 @@ h3 {
 
 /* grid visualistion for css testing */
 
-.container,
+/* .container,
 .row {
   border: 2px solid black;
 }
@@ -33,4 +33,4 @@ h3 {
 .col-12 {
   border: 2px solid white;
   background-color: lightgrey;
-}
+} */
