add auto-carousel to index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,7 +7,7 @@
   --light-hightlight-color: #7a9fc2;
 }
 
-/* general styles */
+/* Gobal styles */
 body {
   font-family: var(--primary-font);
 }
@@ -17,10 +17,16 @@ h2,
 h3 {
   color: var(--primary-color);
   font-family: var(--secondary-font);
+  text-transform: uppercase;
 }
 
 .sub-heading-color {
   color: var(--highlight-color);
+}
+
+.section {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 /* Navbar css */
@@ -31,6 +37,12 @@ h3 {
 
 #navbar .logo {
   width: 30px;
+}
+
+/* header */
+
+#header .id {
+  font-family: var(--secondary-font);
 }
 
 /* grid visualistion for css testing */
