add student discount and form for reserving game

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -99,6 +99,14 @@ h2 {
   border: none;
 }
 
+/* events */
+
+#events th:hover,
+#events td:hover {
+  background-color: var(--highlight-color);
+  color: white;
+}
+
 /* footer/contact */
 
 #contact {
@@ -134,18 +142,6 @@ h2 {
 #contact .table-dark * {
   background-color: transparent;
 }
-
-/* grid visualistion for css testing */
-
-/* .container,
-.row {
-  border: 2px solid black;
-}
-
-.col-12 {
-  border: 2px solid white;
-  background-color: lightgrey;
-} */
 
 /* media quries */
 
