--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -134,6 +134,8 @@ h2 {
 #contact .social-links i {
   color: var(--light-hightlight-color);
   font-size: 1.9rem;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
 
